--- a/OrchardCoreSiteCMS/Pages/_ViewImports.cshtml
+++ b/OrchardCoreSiteCMS/Pages/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using OrchardCoreSiteCMS
+@using OrchardCore
 @namespace OrchardCoreSiteCMS.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, OrchardCore.DisplayManagement
